# PartsInventoryBackend

./: .gitignore  README.md  alembic.ini  api.py  config.yaml  db.py  fetch_version.py  main.py  models.py  partsdb.sqlite  pyproject.toml  requirements.txt  sorter.py  tui.py
alembic/versions/: 001_initial_tables.py  e4bb39cc504d_initial.py
