[project]
name = "partsinventorybackend"
version = "2.0.0"
description = "Parts Inventory Management Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.111.1",
    "httpx~=0.27.0",
    "uvicorn~=0.34.3",
    "pydantic~=2.8.2",
    "pyyaml~=6.0.1",
    "loguru~=0.7.2",
    "psutil~=6.0.0",
    "semver~=3.0.2",
]
