[project]
name = "partsinventorybackend"
version = "2.0.0"
description = "Parts Inventory Management Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.115.13",
    "httpx~=0.28.1",
    "uvicorn~=0.34.3",
    "pydantic~=2.11.7",
    "pyyaml~=6.0.2",
    "loguru~=0.7.3",
    "psutil~=7.0.0",
    "semver~=3.0.4",
    "sqlalchemy~=2.0.41",
    "alembic~=1.16.2"
]
